      the target tree. Previously it returned True unconditionally.
      (Robert Collins)

  TESTING:

    * ``addCleanup`` now takes ``*arguments`` and ``**keyword_arguments``
      which are then passed to the cleanup callable as it is run. In
      addition, addCleanup no longer requires that the callables passed to
      it be unique. (Jonathan Lange)

  INTERNALS:

    * ``bzrlib.diff.DiffTree.show_diff`` now skips changes where the kind
      is unknown in both source and target.
      (Robert Collins, Aaron Bentley)


bzr 1.6rc5 2008-08-19
---------------------

  BUG FIXES: 

    * Disable automatic detection of stacking based on a containing
      directory of the target. It interacted badly with push, and needs a
      bit more work to get the edges polished before it should happen
      automatically. (John Arbash Meinel, #259275)
      (This change was reverted when merged to bzr.dev)
  

bzr 1.6rc4 2008-08-18
---------------------

  BUG FIXES: 

    * Fix a regression in knit => pack fetching.  We had a logic
      inversion, causing the fetch to insert fulltexts in random order,
      rather than preserving deltas.  (John Arbash Meinel, #256757)


bzr 1.6rc3 2008-08-14
---------------------

  CHANGES:

    * Disable reading ``.bzrrules`` as a per-branch rule preferences
      file. The feature was not quite ready for a full release.
      (Robert Collins)

  IMPROVEMENTS:

    * Update the windows installer to bundle TortoiseBzr and ``qbzr``
      into the standalone installer. This will be the first official
      windows release that installs Tortoise by default.
      (Mark Hammond)

  BUG FIXES: 

    * Fix a regression in ``bzr+http`` support. There was a missing
      function (``_read_line``) that needed to be carried over from
      ``bzr+ssh`` support. (Andrew Bennetts)

    * ``GraphIndex`` objects will internally read an entire index if more
      than 1/20th of their keyspace is requested in a single operation.